# winteriscoming

./: .eslintrc.base.js  .gitignore  .prettierignore  .prettierrc  README.md  package.json  tsconfig.base.json
config/: site.json
data/: README.md
secrets/: google_service_account.example.json
tools/: README.md  pyproject.toml
tools/analyzer/: analyzer.py
tools/common/: config.py
tools/gdrive/: explorer.py
tools/scraper/: scraper.py
tools/tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
