[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-api-python-client>=2.194.0",
    "pandas>=3.0.2",
    "plotext>=5.3.2",
    "requests>=2.33.1",
    "tabulate>=0.10.0",
]
[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
